--- a/css/inicial.css
+++ b/css/inicial.css
@@ -152,8 +152,50 @@ html{
     margin-top: 3rem;
     display: grid;
     gap: 10px;
+    grid-template-columns: repeat(3, 250px);
+    grid-template-rows: repeat(3, 250px);
+    justify-content: center;
     
 }
+.fifth {
+    border-color: #494443;
+    border-radius: 0;
+    color: #443f3b;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    -webkit-transition: color 150ms ease-in-out;
+    transition: color 150ms ease-in-out;
+    margin-bottom: 4rem;
+}
+.fifth:after {
+    content: '';
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    width: 0;
+    height: 100%;
+    background: #444246;
+    z-index: -1;
+    -webkit-transition: width 150ms ease-in-out;
+    transition: width 150ms ease-in-out;
+}
+.fifth:hover {
+    color: #fff;
+}
+.fifth:hover:after {
+    width: 110%;
+}
+
+.botao{
+    display: flex;
+    justify-content: center;
+}
+  
+
 
 .iconfoot{
     height: 7vh;
