--- a/css/portifolio.css
+++ b/css/portifolio.css
@@ -170,3 +170,105 @@ body{
   height:3vh;
   margin-right: 0.5rem;
 }
+
+@media(max-width:768px){
+  .carrossel{
+    height:65vw !important;
+    margin-left: calc(5% - 10px);
+    margin-right: calc(5% - 10px);
+    transform: scale(0.9, 0.75)
+  }
+  
+  
+  #tittlevilla{
+    font-size: 35px;
+  }
+  .font{
+    font-size: 15px;
+  }
+  .boxcenter{
+    
+    height: 50vh;
+  }
+}
+
+
+@media(max-width:425px){
+  .carrossel{
+    margin-left: calc(7% - 10px);
+    margin-right: calc(7% - 10px);
+    height: 50vh !important;
+    transform: scale(1.0, 0.6);
+  }
+  #carouselExampleSlidesOnly{
+    box-shadow: 6px -6px 10px  rgb(29, 29, 29) !important;
+  }
+  
+  #tittlevilla{
+    font-size: 23px;
+  }
+  .font{
+    font-size: 12px;
+    margin-right: 3rem;
+  }
+  .buttonvilla{
+    width: 60vw;
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+  }
+  .bn13 {
+    display: inline-block;
+    padding: 0.5em 1.0em;
+    border: 2px solid #ffffff;
+    margin: 0 0.1em 0.1em 0;
+    border-radius: 0.12rem;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    color: #ffffff;
+    text-align: center;
+    transition: all 0.2s;
+    animation: bn13bouncy 5s infinite linear;
+    position: relative;
+  
+    
+  }
+  
+}
+
+@media(max-width:375px){
+  .carrossel{
+    margin-left: calc(10% - 7px);
+    margin-right: calc(10% - 7px);
+    height: 50vh !important;
+    transform: scale(1.1, 0.5);
+  }
+  .bn13 {
+    display: inline-block;
+    padding: 0.4em 0.2em;
+    border: 2px solid #ffffff;
+    margin: 0 0.1em 0.1em 0;
+    border-radius: 0.12rem;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    color: #ffffff;
+    text-align: center;
+    transition: all 0.2s;
+    animation: bn13bouncy 5s infinite linear;
+    position: relative;
+   
+  
+    
+  }
+  .buttonvilla{
+    margin-right: 3rem;
+  }
+  .font{
+    margin-right: 4rem;
+  }
+  
+}
